fixed water bottle render on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,8 @@ a {
 }
 
 .bottle-image {
-  width: 45px;
-  height: 45px;
+  width: 100%;
+  height: 100%;
 }
 
 .chart {
